fix, mixpanel badge in wrong place on safari

--- a/resources/assets/css/components/overlay.less
+++ b/resources/assets/css/components/overlay.less
@@ -184,14 +184,7 @@
 
 
 .mixpanel-badge {
-  position: absolute;
-  bottom: 1em;
-  right: 1em;
-  z-index: @zindex_info_mixpanel;
-  transition: @speed @bezier_fadein @speed;
-  .mq_640({
-    display: none;
-  });
+  margin: 0 1em 0 auto;
   svg {
     fill: @gray_mixpanel;
   }
